# microlat

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  Dockerfile  HACKING.rst  README.rst  setup.cfg  tox.ini
config/: microlat.yaml
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
microlat/: config.py  constants.py  exceptions.py  log.py  preflight.py  runner.py  tools.py  utils.py
microlat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
microlat/actions/: base.py  bootstrap.py  dummy.py
microlat/cmd/: __init__.py  options.py  shell.py
microlat/cmd/compose/: __init__.py  image.py  options.py
microlat/compose/: bootstrap.py  container.py  ostree.py  vm.py
microlat/compose/templates/: debian-ostree-commit.yaml
microlat/compose/templates/overlay/ostree/lib/tmpfiles.d/: ostree-integration.conf
microlat/compose/templates/scripts/: convert-to-ostree  ostree-prep  setup-uefi-bootloader.sh
microlat/tests/: test_microlat.py
releasenotes/source/: conf.py  index.rst
